# ai-pr-reviewer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ai-pr-review.yml
agent-skills/install-ai-pr-reviewer/: SKILL.md
agent-skills/install-ai-pr-reviewer/scripts/: install-ai-pr-reviewer.py
ai_pr_reviewer/: __init__.py  cli.py  config.py  github.py  llm.py  review.py
tests/: test_review.py
