[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-reviewer"
version = "0.1.0"
description = "GitHub pull request reviewer powered by an OpenAI-compatible model API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ai-pr-reviewer = "ai_pr_reviewer.cli:main"

[tool.setuptools.packages.find]
include = ["ai_pr_reviewer*"]
